--- a/deutsch.html
+++ b/deutsch.html
@@ -25,11 +25,11 @@ ol  {
 
 <h1>Nima Rasekh's Akademische Webseite</h1>
 <img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
-<p>(<a href="https://nimarasekh.github.io/">english version</a>)</p>
+<p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh">english version</a>)</p>
 <p><b>Spread the word:</b> Ihr seid (oder kennt) Bachelor-Studierende mit <i>Migrationshintergrund</i>? Dann könnte <a href="https://www.randstad.de/unternehmen/personalvermittlung/stipendium/">diese Stipendium</a> vielleicht eine gute Option sein. Gerne weiter sagen.</p>
 <p> Ich bin zurzeit Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
 <ul>
-<li> In meinem <a href="CV.pdf">CV</a> (letzter Update: Februar 2024)</a>,</li>
+<li> In meinem <a href="CV.pdf">CV</a> (letzter Update: Juli 2024)</a>,</li>
 <li> Ein <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">Einführungsvideo</a> mit <a href="echt.pdf">Folien</a> für das <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
 <li>Oder via email rasekh [at] mpim-bonn.mpg.de. </li>
 </ul>
