--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ ol  {
 
 <h1>Nima Rasekh's Academic Home Page</h1>
 <img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
-<p>(<a href="https://nimarasekh.github.io/deutsch">deutsche Version</a>)</p>
+<p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh/deutsch">deutsche Version</a>)</p>
 
 <p><b>Spread the word:</b> You are (or know) a Bachelor student in Germany with ``migration background" (<i>Migrationshintergrund</i>)? Consider applying (or encouraging to apply) to <a href="https://www.randstad.de/unternehmen/personalvermittlung/stipendium/">this stipend</a>.</p>
 <p> I am currently a postdoctoral researcher at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute for Mathematics</a> in Bonn. I am currently on the academic job market, seeking tenure track positions.<br> For more information about me check out:
 <ul>
-<li> My <a href="CV.pdf">CV</a> (last update: February 2024)</a>,</li>
+<li> My <a href="CV.pdf">CV</a> (last update: July 2024)</a>,</li>
 <li> An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
 <li>Or contact me via rasekh [at] mpim-bonn.mpg.de. </li>
 </ul>
