--- a/deutsch.html
+++ b/deutsch.html
@@ -26,7 +26,7 @@ ol  {
 <h1>Nima Rasekh's Akademische Webseite</h1>
 <img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
 <p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh">english version</a>)</p>
-<p> Ich bin zurzeit Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a> und QF Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
+<p> Ich bin zurzeit Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a> und Quantum Formalism (QF) Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
 <ul>
 <li> In meinem <a href="CV.pdf">CV</a> (letzter Update: August 2024)</a>,</li>
 <li> Ein <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">Einführungsvideo</a> mit <a href="echt.pdf">Folien</a> für das <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
