--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ ol  {
 <img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
 <p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh/deutsch">deutsche Version</a>)</p>
 
-<p> I am currently a postdoctoral researcher at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute for Mathematics</a> in Bonn and QF Fellow at <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> For more information about me check out:
+<p> I am currently a postdoctoral researcher at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute for Mathematics</a> in Bonn and Quantum Formalism (QF) Fellow at <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> For more information about me check out:
 <ul>
 <li> My <a href="CV.pdf">CV</a> (last update: August 2024)</a>,</li>
 <li> An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
