--- a/deutsch.html
+++ b/deutsch.html
@@ -24,7 +24,7 @@ ol  {
 <body bgcolor=#e6f2ff>
 
 <h1>Nima Rasekh's Akademische Webseite</h1>
-<img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
+<img src="Nima_MFO.jpg" alt="My Pic" style="float:right;width:666px;height:500px;">
 <p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh">english version</a>)</p>
 <p> Ich bin zurzeit Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a> und Quantum Formalism (QF) Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
 <ul>
