--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ ol  {
 <body bgcolor=#e6f2ff>
 
 <h1>Nima Rasekh's Academic Home Page</h1>
-<img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
+<img src="Nima_MFO.jpg" alt="My Pic" style="float:right;width:666px;height:500px;">
 <p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh/deutsch">deutsche Version</a>)</p>
 
 <p> I am currently a postdoctoral researcher at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute for Mathematics</a> in Bonn and Quantum Formalism (QF) Fellow at <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> For more information about me check out:
