Update Uni Greifswald Position

--- a/deutsch.html
+++ b/deutsch.html
@@ -24,9 +24,9 @@ ol  {
 <body bgcolor=#e6f2ff>
 
 <h1>Nima Rasekh's Akademische Webseite</h1>
-<img src="Nima_MFO.jpg" alt="My Pic" style="float:right;width:666px;height:500px;">
-<p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh">english version</a>)</p>
-<p> Ich bin zurzeit Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a> und Quantum Formalism (QF) Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
+<img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
+<p>(<a href="https://nimarasekh.github.io/">english version</a>)</p>
+<p> Ich bin zurzeit Postdoktorand am <a href="https://www.uni-greifswald.de/">Universität Greifswald</a> in der Forschungsgruppe von <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> und <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, und Quantum Formalism (QF) Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
 <ul>
 <li> In meinem <a href="CV.pdf">CV</a> (letzter Update: August 2024)</a>,</li>
 <li> Ein <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">Einführungsvideo</a> mit <a href="echt.pdf">Folien</a> für das <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
@@ -50,7 +50,7 @@ Detailliertere Information findet sich auf meinem <a href="CV.pdf">CV</a> (letzt
 </p>
 
 <p>
-Vor meiner jetzigen Position in Bonn war ich drei Jahre lang als <em>collaborateur scientifique</em> (Postdoktorand) an der <a href="https://www.epfl.ch">École Polytechnique Fédérale de Lausanne</a> wo ich in der Forschungsgruppe von <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a> gearbeitet habe. Ich war der Doktorand an der <a href="http://www.math.illinois.edu/">University of Illinois at Urbana-Champaign</a> unter der Leitung von <a href="https://rezk.web.illinois.edu/"> Prof. Charles Rezk</a>.
+Vor meiner jetzigen Position in Greifswald war ich eine Zeit lang Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a> und <em>collaborateur scientifique</em> (Postdoktorand) an der <a href="https://www.epfl.ch">École Polytechnique Fédérale de Lausanne</a> wo ich in der Forschungsgruppe von <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a> gearbeitet habe. Ich war der Doktorand an der <a href="http://www.math.illinois.edu/">University of Illinois at Urbana-Champaign</a> unter der Leitung von <a href="https://rezk.web.illinois.edu/"> Prof. Charles Rezk</a>.
 </p>
 
 <p><b>E-Mail:</b> rasekh [at] mpim-bonn.mpg.de<br /><b>Büro:</b> B25<br /><b>Address:</b>Vivatsgasse 7, 53111 Bonn</p>
