--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ ol  {
 <body bgcolor=#e6f2ff>
 
 <h1>Nima Rasekh's Academic Home Page</h1>
-<img src="Nima_MFO.jpg" alt="My Pic" style="float:right;width:666px;height:500px;">
-<p>(<a href="https://guests.mpim-bonn.mpg.de/rasekh/deutsch">deutsche Version</a>)</p>
+<img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
+<p>(<a href="https://nimarasekh.github.io/deutsch">deutsche Version</a>)</p>
 
-<p> I am currently a postdoctoral researcher at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute for Mathematics</a> in Bonn and Quantum Formalism (QF) Fellow at <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> For more information about me check out:
+<p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and a Quantum Formalism (QF) Fellow at the <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> For more information about me check out:
 <ul>
-<li> My <a href="CV.pdf">CV</a> (last update: August 2024)</a>,</li>
+<li> My <a href="CV.pdf">CV</a> (last update: October 2024)</a>,</li>
 <li> An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
 <li>Or contact me via rasekh [at] mpim-bonn.mpg.de. </li>
 </ul>
@@ -53,7 +53,7 @@ I have also taught a course focused on homotopy theory and higher category theor
 </p>
 
 <p>
-Before coming to Bonn I spent three years as a <em>collaborateur scientifique</em> (postdoctoral researcher) at the <a href="https://www.epfl.ch">École Polytechnique Fédérale de Lausanne</a> working in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a>. I was a PhD student at the <a href="http://www.math.illinois.edu/">University of Illinois at Urbana-Champaign</a>, where I worked with my advisor <a href="https://rezk.web.illinois.edu/"> Charles Rezk</a>.
+Before coming to Greifswald I was a postdoctoral fellow at the <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a>  and spent some time as a  <em>collaborateur scientifique</em> (postdoctoral researcher) at the <a href="https://www.epfl.ch">École Polytechnique Fédérale de Lausanne</a> working in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a>. I was a PhD student at the <a href="http://www.math.illinois.edu/">University of Illinois at Urbana-Champaign</a>, where I worked with my advisor <a href="https://rezk.web.illinois.edu/"> Charles Rezk</a>.
 </p>
 
 <p><b>Email:</b> rasekh [at] mpim-bonn.mpg.de<br /><b>Office:</b> B25<br /><b>Address:</b>Vivatsgasse 7, 53111 Bonn</p>
