--- a/deutsch.html
+++ b/deutsch.html
@@ -24,7 +24,7 @@ ol  {
 <body bgcolor=#e6f2ff>
 
 <h1>Nima Rasekh's Akademische Webseite</h1>
-<img src="Nima.jpg" alt="My Pic" style="float:right;width:345px;height:614px;">
+<img src="Nima_MFO.jpg" alt="My Pic" style="float:right;width:666px;height:500px;">
 <p>(<a href="https://nimarasekh.github.io/">english version</a>)</p>
 <p> Ich bin zurzeit Postdoktorand am <a href="https://www.uni-greifswald.de/">Universität Greifswald</a> in der Forschungsgruppe von <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> und <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, und Quantum Formalism (QF) Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
 <ul>
