--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ I have also taught a course focused on homotopy theory and higher category theor
 Before coming to Greifswald I was a postdoctoral fellow at the <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a>  and spent some time as a  <em>collaborateur scientifique</em> (postdoctoral researcher) at the <a href="https://www.epfl.ch">École Polytechnique Fédérale de Lausanne</a> working in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a>. I was a PhD student at the <a href="http://www.math.illinois.edu/">University of Illinois at Urbana-Champaign</a>, where I worked with my advisor <a href="https://rezk.web.illinois.edu/"> Charles Rezk</a>.
 </p>
 
-<p><b>Email:</b> nima.rasekh [at] uni-greifswald.de<br /><b>Office:</b> <br /><b>Address:</b>Walther-Rathenau-Straße 47, 17489 Greifswald</p>
+<p><b>Email:</b> nima.rasekh [at] uni-greifswald.de<br /><b>Office:</b> 5.16<br /><b>Address:</b>Walther-Rathenau-Straße 47, 17489 Greifswald<br /><b>Telephone:</b> +49 3834 420 4663</p>
 
 
 <!--	You can find out more about my research in my <a href="researchstatement.pdf">research statement</a>. 
