--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ ol  {
 <ul>
 <li> My <a href="CV.pdf">CV</a> (last update: October 2024)</a>,</li>
 <li> An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
-<li>Or contact me via rasekh [at] mpim-bonn.mpg.de. </li>
+<li>Or contact me via nima.rasekh [at] uni-greifswald.de. </li>
 </ul>
 <!--For more information check out my <a href="CV.pdf">CV</a> (last update: October 2022). You can also contact me via rasekh [at] mpim-bonn.mpg.de.</p>-->
 </p>
