--- a/deutsch.html
+++ b/deutsch.html
@@ -30,7 +30,7 @@ ol  {
 <ul>
 <li> In meinem <a href="CV.pdf">CV</a> (letzter Update: August 2024)</a>,</li>
 <li> Ein <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">Einführungsvideo</a> mit <a href="echt.pdf">Folien</a> für das <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
-<li>Oder via email rasekh [at] mpim-bonn.mpg.de. </li>
+<li>Oder via email nima.rasekh [at] uni-greifswald.de. </li>
 </ul>
 </p>
 <!--
@@ -50,7 +50,7 @@ Detailliertere Information findet sich auf meinem <a href="CV.pdf">CV</a> (letzt
 </p>
 
 <p>
-Vor meiner jetzigen Position in Greifswald war ich eine Zeit lang Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a> und <em>collaborateur scientifique</em> (Postdoktorand) an der <a href="https://www.epfl.ch">École Polytechnique Fédérale de Lausanne</a> wo ich in der Forschungsgruppe von <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a> gearbeitet habe. Ich war der Doktorand an der <a href="http://www.math.illinois.edu/">University of Illinois at Urbana-Champaign</a> unter der Leitung von <a href="https://rezk.web.illinois.edu/"> Prof. Charles Rezk</a>.
+Vor meiner jetzigen Position in Greifswald war ich eine Zeit lang Postdoktorand am <a href="https://www.mpim-bonn.mpg.de/">Max-Planck-Institut für Mathematik</a> und <em>collaborateur scientifique</em> (Postdoktorand) an der <a href="https://www.epfl.ch">École Polytechnique Fédérale de Lausanne</a> wo ich in der Forschungsgruppe von <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a> gearbeitet habe. Ich war Doktorand an der <a href="http://www.math.illinois.edu/">University of Illinois at Urbana-Champaign</a> unter der Leitung von <a href="https://rezk.web.illinois.edu/"> Prof. Charles Rezk</a>.
 </p>
 
 <p><b>E-Mail:</b> nima.rasekh [at] uni-greifswald.de<br /><b>Büro:</b> 5.16<br /><b>Addresse:</b>Walther-Rathenau-Straße 47, 17489 Greifswald<br /><b>Telefon:</b> +49 3834 420 4663</p>
