Fix CV Update Date

--- a/deutsch.html
+++ b/deutsch.html
@@ -28,7 +28,7 @@ ol  {
 <p>(<a href="https://nimarasekh.github.io/">english version</a>)</p>
 <p> Ich bin zurzeit Postdoktorand am <a href="https://www.uni-greifswald.de/">Universität Greifswald</a> in der Forschungsgruppe von <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> und <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, und Quantum Formalism (QF) Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen.<br> Mehr Information findet man:
 <ul>
-<li> In meinem <a href="CV.pdf">CV</a> (letzter Update: August 2024)</a>,</li>
+<li> In meinem <a href="CV.pdf">CV</a> (letzter Update: Oktober 2024)</a>,</li>
 <li> Ein <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">Einführungsvideo</a> mit <a href="echt.pdf">Folien</a> für das <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
 <li>Oder via email nima.rasekh [at] uni-greifswald.de. </li>
 </ul>
