Add christmast talk

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Finally, if you want to know more about me beyond mathematics, I recently had th
 </p>
 
 <p>
-In my passion to make homotopical thinking more accessible to a wider range of mathematicians and computer scientists I am also pursuing <b>formalization of mathematics</b> and particularly homotopical structures. You can find my work on my <a href="https://github.com/nimarasekh">Github page</a>.
+In my passion to make homotopical thinking more accessible to a wider range of mathematicians and computer scientists I am also pursuing <b>formalization of mathematics</b> and particularly homotopical structures. You can find my work on my <a href="https://github.com/nimarasekh">Github</a> page. <a href="Christmas_Greifswald.pdf">Here</a> are also some slides from my talk at the Christmas colloquium introducing formalization to mathematicians.
 <!-- More recently I have gotten into the <b>formalization of mathematics</b>, in particular categorical structures. You can find more information on my <a href="https://github.com/nimarasekh">Github page</a>. -->
 </p>
 
