--- a/deutsch.html
+++ b/deutsch.html
@@ -44,7 +44,7 @@ Detailliertere Information findet sich auf meinem <a href="CV.pdf">CV</a> (letzt
 
 
 <p>
-    In meiner Leidenschaft, das homotopische Denken einem breiteren Spektrum von Mathematikern und Informatikern zugänglicher zu machen, verfolge ich jetzt auch die <b>Formalisierung der Mathematik</b> und insbesondere homotopischer Strukturen. Mehr Details über meine Formalisierungen sind auf <a href="https://github.com/nimarasekh">Github</a> Seite finden. <a href="Christmas_Greifswald.pdf">Hier</a> sind auch Folien meines Vortrags im Weihnachtskolloquium über Formalisierung in der Mathematik.
+    In meiner Leidenschaft, das homotopische Denken einem breiteren Spektrum von Mathematikern und Informatikern zugänglicher zu machen, verfolge ich jetzt auch die <b>Formalisierung der Mathematik</b> und insbesondere homotopischer Strukturen. Mehr Details über meine Formalisierungen sind auf <a href="https://github.com/nimarasekh">Github</a> Seite finden. <a href="Weihnachten_Greifswald.pdf">Hier</a> sind auch Folien meines Vortrags im Weihnachtskolloquium über Formalisierung in der Mathematik.
 </p>    
 <p>    
     Ich habe auch eine Vorlesung zur Homotopietheorie und höheren Kategorientheorie gehalten, dessen Inhalt ich in der Zukunft erweitern möchte. In der Zwischenzeit gibt es hier den <a href="Higher_Categories_EPFL.pdf">Skript der Vorlesung</a>.
