--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@ ol  {
 <img src="Nima_MFO.jpg" alt="My Pic" style="float:right;width:666px;height:500px;">
 <p>(<a href="https://nimarasekh.github.io/deutsch">deutsche Version</a>)</p>
 
-<p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and a Quantum Formalism (QF) Fellow at the <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> For more information about me check out:
+<p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and a Quantum Formalism (QF) Fellow at the <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> 
+    
+Here are some ways to learn more about me:
+
+CV (Oct 2024) GitHub LinkedIn X Bluesky Mastodon
+
+If you want to get in touch here are some ways to reach me: <br>
+
+<img src="icon/email.png" alt="Example" width="24" height="24" style="vertical-align: middle;">Email    <a href="https://discordapp.com/users/973956815140290581"><img src="icon/discord.png" alt="Example" width="24" height="24" style="vertical-align: middle;">Discord</a>
+
 <ul>
-<li> My <a href="CV.pdf">CV</a> (last update: October 2024)</a>,</li>
-<li> An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
+<li> CV (Oct 2024)</li>
+<li> GitHub</li>
+<li> Social media, that I use occasionally: LinkedIn X Bluesky Mastodon </li> 
+<li> Social media, that I use occasionally: LinkedIn X Bluesky Mastodon </li>
+
+
+
+    An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
 <li>Or contact me via nima.rasekh [at] uni-greifswald.de. </li>
 </ul>
 <!--For more information check out my <a href="CV.pdf">CV</a> (last update: October 2022). You can also contact me via rasekh [at] mpim-bonn.mpg.de.</p>-->
