--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ ul  {
 ol  {
     font-size:100%;
 }
+.no-bullets {
+            list-style-type: none; /* Removes bullet symbols */
+            padding: 0;
+            margin: 0;
+}
 </style>
 
 <body bgcolor=#e6f2ff>
@@ -27,29 +32,62 @@ ol  {
 <img src="Nima_MFO.jpg" alt="My Pic" style="float:right;width:666px;height:500px;">
 <p>(<a href="https://nimarasekh.github.io/deutsch">deutsche Version</a>)</p>
 
-<p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and a Quantum Formalism (QF) Fellow at the <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions.<br> 
-    
-Here are some ways to learn more about me:
+<p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and a Quantum Formalism (QF) Fellow at the <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions. Here are some links to learn more about me:</p>
 
-CV (Oct 2024) GitHub LinkedIn X Bluesky Mastodon
-
-If you want to get in touch here are some ways to reach me: <br>
-
-<img src="icon/email.png" alt="Example" width="24" height="24" style="vertical-align: middle;">Email    <a href="https://discordapp.com/users/973956815140290581"><img src="icon/discord.png" alt="Example" width="24" height="24" style="vertical-align: middle;">Discord</a>
-
-<ul>
-<li> CV (Oct 2024)</li>
-<li> GitHub</li>
-<li> Social media, that I use occasionally: LinkedIn X Bluesky Mastodon </li> 
-<li> Social media, that I use occasionally: LinkedIn X Bluesky Mastodon </li>
-
-
-
-    An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
-<li>Or contact me via nima.rasekh [at] uni-greifswald.de. </li>
-</ul>
-<!--For more information check out my <a href="CV.pdf">CV</a> (last update: October 2022). You can also contact me via rasekh [at] mpim-bonn.mpg.de.</p>-->
+<p>
+    <a href="CV.pdf"><img src="icon/pdf.png" alt="CV" width="24" height="24" style="vertical-align: middle;"></a> CV (Oct 2024)&nbsp;&nbsp;
+    <a href="https://github.com/nimarasekh"><img src="icon/github.png" alt="GitHub" width="24" height="24" style="vertical-align: middle;"></a> GitHub&nbsp;&nbsp;
+    <a href="http://arxiv.org/a/rasekh_n_1"><img src="icon/arxiv.png" alt="Arxiv" width="24" height="24" style="vertical-align: middle;"></a> Arxiv&nbsp;&nbsp;
+    <a href="https://scholar.google.com/citations?user=gh51F68AAAAJ&hl=en&oi=ao"><img src="icon/scholar.png" alt="Scholar" width="24" height="24" style="vertical-align: middle;"></a> Google Scholar&nbsp;&nbsp;
+    <a href="https://www.linkedin.com/in/nimarasekh/"><img src="icon/linkedin.png" alt="LinkedIn" width="24" height="24" style="vertical-align: middle;"></a> LinkedIn&nbsp;&nbsp;
+    <a href="https://orcid.org/0000-0003-0766-2755"><img src="icon/orcid.png" alt="Orcid" width="24" height="24" style="vertical-align: middle;"></a> ORCID&nbsp;&nbsp;
+    <a href="https://www.researchgate.net/profile/Nima-Rasekh"><img src="icon/researchgate.png" alt="ResearchGate" width="24" height="24" style="vertical-align: middle;"></a> ResearchGate&nbsp;&nbsp;
+    <a href="https://x.com/nima_rasekh"><img src="icon/x.png" alt="X" width="24" height="24" style="vertical-align: middle;"></a> X&nbsp;&nbsp;
+    <a href="https://bsky.app/profile/nimarasekh.bsky.social"><img src="icon/bluesky.png" alt="Bluesky" width="24" height="24" style="vertical-align: middle;"></a> Bluesky&nbsp;&nbsp;
+    <a href="https://mastodon.social/@nimarasekh"><img src="icon/mastodon.png" alt="Mastodon" width="24" height="24" style="vertical-align: middle;"></a> Mastodon&nbsp;&nbsp;
+    <a href="https://mathstodon.xyz/@nimarasekh"><img src="icon/mastodon.png" alt="Mathstodon" width="24" height="24" style="vertical-align: middle;"></a> Mathstodon
 </p>
+
+<!-- CV (Oct 2024) GitHub LinkedIn X Bluesky Mastodon arXiv google scholar orcid researchgate -->
+<p>
+    If you want to get in touch here are some ways to reach me:
+</p>
+
+<p>
+    <a href="mailto:nima.rasekh@uni-greifswald.de"><img src="icon/email.png" alt="Email" width="24" height="24" style="vertical-align: middle;"></a> Email&nbsp;&nbsp;
+    <a href="https://discordapp.com/users/973956815140290581"><img src="icon/discord.png" alt="Discord" width="24" height="24" style="vertical-align: middle;"></a> Discord
+</p>
+
+<!-- <img src="icon/email.png" alt="Example" width="24" height="24" style="vertical-align: middle;">Email    <a href="https://discordapp.com/users/973956815140290581"><img src="icon/discord.png" alt="Example" width="24" height="24" style="vertical-align: middle;">Discord</a>
+<img src="icon/github.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/scholar.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/linkedin_2.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/bluesky_2.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/orcid.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/researchgate_2.svg" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/arxiv.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/mastodon_2.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+<img src="icon/x_3.png" alt="Example" width="24" height="24" style="vertical-align: middle;">
+
+<ul class="no-bullets">
+<li> <img src="icon/pdf_2.png" alt="Example" width="24" height="24" style="vertical-align: middle;"> CV (Oct 2024)</li>
+<li> <img src="icon/github.png" alt="Example" width="24" height="24" style="vertical-align: middle;"> GitHub</li>
+<li> <img src="icon/arxiv.png" alt="Example" width="24" height="24" style="vertical-align: middle;"> Arxiv</li>
+<li> <img src="icon/scholar.png" alt="Example" width="24" height="24" style="vertical-align: middle;"> Google Scholar</li>
+<li> <img src="icon/orcid.png" alt="Example" width="24" height="24" style="vertical-align: middle;"> ORCID</li>
+<li> <img src="icon/researchgate_2.svg" alt="Example" width="24" height="24" style="vertical-align: middle;"> ResearchGate</li>
+
+
+<li> Social media, that I use occasionally: LinkedIn X Bluesky Mastodon </li> 
+<li> Social media, that I use occasionally: LinkedIn X Bluesky Mastodon </li> -->
+
+
+
+    <!-- An <a href="https://www.youtube.com/watch?v=jHC1nNtPzzs">introductory video</a> with <a href="echt.pdf">slides</a> for the <a href="https://sites.google.com/view/jmra/videos/echt-employment-network-fall-2022">eCHT Employment Network Fall 2022</a>,</li>
+<li>Or contact me via nima.rasekh [at] uni-greifswald.de. </li>
+</ul> -->
+<!--For more information check out my <a href="CV.pdf">CV</a> (last update: October 2022). You can also contact me via rasekh [at] mpim-bonn.mpg.de.</p>-->
+<!-- </p> -->
 <p>
 I am a <b>homotopy theorist</b>, meaning I like to understand <b>how</b> two things are equal. Homotopical thinking has already found many applications throughout mathematics, such as <a href="https://en.wikipedia.org/wiki/Algebraic_K-theory">algebra</a>, <a href="https://en.wikipedia.org/wiki/Norm_residue_isomorphism_theorem">geometry</a> and <a href="https://en.wikipedia.org/wiki/Cobordism_hypothesis">mathematical physics</a>, and I am always excited about finding new applications and connections. 
 <!-- I mostly think about <b>homotopy theory</b>, particularly if it includes some category theory. Concretely I am interested in applying homotopical thinking to a variety of mathematics ranging from derived geometry to mathematical foundations. -->
