--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ ol  {
     <a href="https://www.researchgate.net/profile/Nima-Rasekh"><img src="icon/researchgate.png" alt="ResearchGate" width="24" height="24" style="vertical-align: middle;"></a> ResearchGate&nbsp;&nbsp;
     <a href="https://x.com/nima_rasekh"><img src="icon/x.png" alt="X" width="24" height="24" style="vertical-align: middle;"></a> X&nbsp;&nbsp;
     <a href="https://bsky.app/profile/nimarasekh.bsky.social"><img src="icon/bluesky.png" alt="Bluesky" width="24" height="24" style="vertical-align: middle;"></a> Bluesky&nbsp;&nbsp;
-    <a href="https://mastodon.social/@nimarasekh"><img src="icon/mastodon.png" alt="Mastodon" width="24" height="24" style="vertical-align: middle;"></a> Mastodon&nbsp;&nbsp;
-    <a href="https://mathstodon.xyz/@nimarasekh"><img src="icon/mastodon.png" alt="Mathstodon" width="24" height="24" style="vertical-align: middle;"></a> Mathstodon
+    <!-- <a href="https://mastodon.social/@nimarasekh"><img src="icon/mastodon.png" alt="Mastodon" width="24" height="24" style="vertical-align: middle;"></a> Mastodon&nbsp;&nbsp; -->
+    <a href="https://mathstodon.xyz/@nimarasekh"><img src="icon/mastodon.png" alt="Mastodon" width="24" height="24" style="vertical-align: middle;"></a> Mastodon
 </p>
 
 <!-- CV (Oct 2024) GitHub LinkedIn X Bluesky Mastodon arXiv google scholar orcid researchgate -->
