--- a/deutsch.html
+++ b/deutsch.html
@@ -38,8 +38,8 @@ ol  {
     <a href="https://www.researchgate.net/profile/Nima-Rasekh"><img src="icon/researchgate.png" alt="ResearchGate" width="24" height="24" style="vertical-align: middle;"></a> ResearchGate&nbsp;&nbsp;
     <a href="https://x.com/nima_rasekh"><img src="icon/x.png" alt="X" width="24" height="24" style="vertical-align: middle;"></a> X&nbsp;&nbsp;
     <a href="https://bsky.app/profile/nimarasekh.bsky.social"><img src="icon/bluesky.png" alt="Bluesky" width="24" height="24" style="vertical-align: middle;"></a> Bluesky&nbsp;&nbsp;
-    <a href="https://mastodon.social/@nimarasekh"><img src="icon/mastodon.png" alt="Mastodon" width="24" height="24" style="vertical-align: middle;"></a> Mastodon&nbsp;&nbsp;
-    <a href="https://mathstodon.xyz/@nimarasekh"><img src="icon/mastodon.png" alt="Mathstodon" width="24" height="24" style="vertical-align: middle;"></a> Mathstodon
+    <!-- <a href="https://mastodon.social/@nimarasekh"><img src="icon/mastodon.png" alt="Mastodon" width="24" height="24" style="vertical-align: middle;"></a> Mastodon&nbsp;&nbsp; -->
+    <a href="https://mathstodon.xyz/@nimarasekh"><img src="icon/mastodon.png" alt="Mastodon" width="24" height="24" style="vertical-align: middle;"></a> Mastodon
 </p>
 <!-- <ul>
 <li> In meinem <a href="CV.pdf">CV</a> (letztes Update: Oktober 2024)</a>,</li>
@@ -53,7 +53,7 @@ Detailliertere Information findet sich auf meinem <a href="CV.pdf">CV</a> (letzt
 -->
 
 <p>
-    Es gibt auch mehrere Möglichkeiten mich zu erreichen:
+    Es gibt auch mehrere Möglichkeiten mich zu kontaktieren:
 </p>
 
 <p>
