--- a/index.html
+++ b/index.html
@@ -26,11 +26,34 @@ body, p, ul, ol {
             margin: 0 auto;
 }
 
-.social-icon {
+@media (max-width: 768px) {
+            .icon {
+                width: 20px;       /* Fixed size for small screens */
+                height: auto;
+            }
+        }
+
+/* .social-icon {
     width: 24px;
     height: 24px;
     vertical-align: middle;
-}
+} */
+
+.social-icon {
+            width: 4%;             
+            max-width: 24px;       
+            min-width: 16px;       
+            height: auto;          
+            vertical-align: middle; 
+        }
+
+@media (max-width: 768px) {
+    .social-icon {
+                width: 20px;       
+                height: auto;
+            }
+        }
+
 body {
     background-color: #e6f2ff;
 }
