add Youtube link

--- a/deutsch.html
+++ b/deutsch.html
@@ -64,7 +64,8 @@ body {
     <a href="https://www.researchgate.net/profile/Nima-Rasekh" aria-label="ResearchGate"><img src="icon/researchgate.png" alt="ResearchGate" class="social-icon"></a> ResearchGate&nbsp;&nbsp;
     <a href="https://x.com/nima_rasekh" aria-label="X"><img src="icon/x.png" alt="X" class="social-icon"></a> X&nbsp;&nbsp;
     <a href="https://bsky.app/profile/nimarasekh.bsky.social" aria-label="BlueSky"><img src="icon/bluesky.png" alt="Bluesky" class="social-icon"></a> Bluesky&nbsp;&nbsp;
-    <a href="https://mathstodon.xyz/@nimarasekh" aria-label="Mastodon"><img src="icon/mastodon.png" alt="Mastodon" class="social-icon"></a> Mastodon
+    <a href="https://mathstodon.xyz/@nimarasekh" aria-label="Mastodon"><img src="icon/mastodon.png" alt="Mastodon" class="social-icon"></a> Mastodon&nbsp;&nbsp;
+    <a href="https://youtube.com/playlist?list=PL4quE6Mhntx_4zNmwEAHbBL3w-PzYV4Vw&si=Kax28q2-R4YEJYKs" aria-label="Youtube"><img src="icon/youtube.png" alt="Youtube" class="social-icon"></a> Youtube
 </p>
 <!-- <ul>
 <li> In meinem <a href="CV.pdf">CV</a> (letztes Update: Oktober 2024)</a>,</li>
