--- a/deutsch.html
+++ b/deutsch.html
@@ -52,10 +52,10 @@ body {
     <img src="Nima_MFO.jpg" alt="Photo of Nima Rasekh at Oberwolfach" class="profile-image">
 </div>
 <p>(<a href="https://nimarasekh.github.io/">english version</a>)</p>
-<p> Ich bin zurzeit Postdoktorand am <a href="https://www.uni-greifswald.de/">Universität Greifswald</a> in der Forschungsgruppe von <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> und <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, und Quantum Formalism (QF) Fellow in der <a href="https://zaikugroup.com/">Zaiku Group</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen. Hier sind einige Links mit mehr Information: </p>
+<p> Ich bin zurzeit Postdoktorand am <a href="https://www.uni-greifswald.de/">Universität Greifswald</a> in der Forschungsgruppe von <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> und <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, und mathematischer Forscher für <a href="https://www.turing.com/">Turing</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen. Hier sind einige Links mit mehr Information: </p>
 
 <p>
-    <a href="CV.pdf"  aria-label="CV"><img src="icon/pdf.png" alt="CV" class="social-icon"></a> CV (Aug 2025)&nbsp;&nbsp;
+    <a href="CV.pdf"  aria-label="CV"><img src="icon/pdf.png" alt="CV" class="social-icon"></a> CV (Sep 2025)&nbsp;&nbsp;
     <a href="https://github.com/nimarasekh" aria-label="Github"><img src="icon/github.png" alt="GitHub" class="social-icon"></a> GitHub&nbsp;&nbsp;
     <a href="http://arxiv.org/a/rasekh_n_1" aria-label="ArXiv"><img src="icon/arxiv.png" alt="Arxiv" class="social-icon"></a> Arxiv&nbsp;&nbsp;
     <a href="https://scholar.google.com/citations?user=gh51F68AAAAJ&hl=en&oi=ao"  aria-label="Google Scholar"><img src="icon/scholar.png" alt="Scholar" class="social-icon"></a> Google Scholar&nbsp;&nbsp;
