--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ body {
 </div>
     <p>(<a href="https://nimarasekh.github.io/deutsch">deutsche Version</a>)</p>
 
-<p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and a Quantum Formalism (QF) Fellow at the <a href="https://zaikugroup.com/">Zaiku Group</a>. I am currently on the academic job market, seeking tenure track positions. Here are some links to learn more about me:</p>
+<p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and Mathematics Research Scientist at <a href="https://www.turing.com/">Turing</a>. I am currently on the academic job market, seeking tenure track positions. Here are some links to learn more about me:</p>
 
 <p>
-    <a href="CV.pdf"  aria-label="CV"><img src="icon/pdf.png" alt="CV" class="social-icon"></a> CV (Aug 2025)&nbsp;&nbsp;
+    <a href="CV.pdf"  aria-label="CV"><img src="icon/pdf.png" alt="CV" class="social-icon"></a> CV (Sep 2025)&nbsp;&nbsp;
     <a href="https://github.com/nimarasekh" aria-label="Github"><img src="icon/github.png" alt="GitHub" class="social-icon"></a> GitHub&nbsp;&nbsp;
     <a href="http://arxiv.org/a/rasekh_n_1" aria-label="ArXiv"><img src="icon/arxiv.png" alt="Arxiv" class="social-icon"></a> Arxiv&nbsp;&nbsp;
     <a href="https://scholar.google.com/citations?user=gh51F68AAAAJ&hl=en&oi=ao"  aria-label="Google Scholar"><img src="icon/scholar.png" alt="Scholar" class="social-icon"></a> Google Scholar&nbsp;&nbsp;
